--- a/gigasoft-standalone/standalone.example.properties
+++ b/gigasoft-standalone/standalone.example.properties
@@ -8,7 +8,7 @@
 plugins=dev-runtime/giga-plugins
 data=dev-runtime/giga-data
 name=GigaSoft Standalone
-version=1.0.0
+version=1.1.0-SNAPSHOT
 maxPlayers=0
 tickPeriodMillis=50
 autoSaveEveryTicks=200
