--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 kotlin.code.style=official
+# Avoid Kotlin daemon cache/file-lock instability seen in repeated smoke/soak runs on Windows.
+kotlin.compiler.execution.strategy=in-process
