--- a/gigasoft-demo-standalone/src/main/resources/gigaplugin.yml
+++ b/gigasoft-demo-standalone/src/main/resources/gigaplugin.yml
@@ -1,8 +1,15 @@
-﻿id: gigasoft-demo
+id: gigasoft-demo
 name: GigaSoft Demo
-version: 1.0.0
+version: 1.5.0-SNAPSHOT
 main: com.gigasoft.demo.DemoGigaPlugin
 apiVersion: 1
 dependencies: []
 permissions:
   - host.server.read
+  - host.server.broadcast
+  - host.player.message
+  - host.world.write
+  - host.mutation.batch
+  - adapter.invoke.*
+  - adapter.capability.demo.read
+
