--- a/.github/workflows/release-assets.yml
+++ b/.github/workflows/release-assets.yml
@@ -92,6 +92,50 @@ jobs:
           printf '  ]\n}\n' >> release-assets/ARTIFACTS.json
           ls -lah release-assets
 
+      - name: Verify release asset manifests and checksums
+        shell: bash
+        run: |
+          set -euo pipefail
+          mapfile -t RELEASE_JARS < <(find release-assets -maxdepth 1 -type f -name "*.jar" | sort)
+          if [ "${#RELEASE_JARS[@]}" -ne 3 ]; then
+            echo "Expected exactly 3 release jars, found ${#RELEASE_JARS[@]}" >&2
+            exit 1
+          fi
+          mapfile -t ARTIFACT_LINES < <(sort release-assets/ARTIFACTS.txt)
+          mapfile -t JAR_LINES < <(printf '%s\n' "${RELEASE_JARS[@]}" | xargs -n1 basename | sort)
+          if [ "${ARTIFACT_LINES[*]}" != "${JAR_LINES[*]}" ]; then
+            echo "ARTIFACTS.txt does not match built jar set" >&2
+            exit 1
+          fi
+          (cd release-assets && sha256sum -c SHA256SUMS.txt)
+          python - <<'PY'
+          import hashlib
+          import json
+          from pathlib import Path
+
+          root = Path("release-assets")
+          manifest = json.loads((root / "ARTIFACTS.json").read_text(encoding="utf-8"))
+          artifacts = manifest.get("artifacts", [])
+          if len(artifacts) != 3:
+              raise SystemExit(f"Expected 3 artifacts in ARTIFACTS.json, found {len(artifacts)}")
+          jar_files = sorted(root.glob("*.jar"))
+          jar_names = [p.name for p in jar_files]
+          manifest_names = sorted(a["name"] for a in artifacts)
+          if manifest_names != sorted(jar_names):
+              raise SystemExit("ARTIFACTS.json artifact names do not match release jars")
+
+          for artifact in artifacts:
+              path = root / artifact["name"]
+              if not path.exists():
+                  raise SystemExit(f"Missing jar listed in ARTIFACTS.json: {artifact['name']}")
+              actual_size = path.stat().st_size
+              if actual_size != int(artifact["sizeBytes"]):
+                  raise SystemExit(f"Size mismatch for {path.name}: manifest={artifact['sizeBytes']} actual={actual_size}")
+              actual_sha = hashlib.sha256(path.read_bytes()).hexdigest()
+              if actual_sha != artifact["sha256"]:
+                  raise SystemExit(f"SHA256 mismatch for {path.name}")
+          PY
+
       - name: Upload release assets to GitHub release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
