--- a/clockwork-standalone/standalone.example.properties
+++ b/clockwork-standalone/standalone.example.properties
@@ -1,4 +1,4 @@
-# Standalone launch config for clockwork-standalone MainKt.
+﻿# Standalone launch config for clockwork-standalone MainKt.
 # CLI args override file values.
 # Do not commit real secrets to git.
 
@@ -8,10 +8,17 @@
 plugins=dev-runtime/giga-plugins
 data=dev-runtime/giga-data
 name=Clockwork Standalone
-version=1.5.0-rc.2
+version=1.5.0
+defaultWorld=world
 maxPlayers=0
+maxWorlds=0
+maxEntities=0
 tickPeriodMillis=50
 autoSaveEveryTicks=200
+chunkViewDistance=4
+maxChunkLoadsPerTick=128
+maxLoadedChunksPerWorld=4096
+runtimeSchedulerWorkerThreads=2
 
 # ------------------------------------------------------------------------------
 # Network
@@ -35,6 +42,8 @@ netMaxJsonPayloadEntries=64
 netMaxJsonPayloadKeyChars=64
 netMaxJsonPayloadValueChars=1024
 netMaxJsonPayloadTotalChars=8192
+netWorkerThreads=4
+netWorkerQueueCapacity=2048
 
 # Network diagnostics/IO
 netAuditLogEnabled=true
@@ -57,8 +66,12 @@ adapterAuditLogSuccesses=false
 adapterAuditRetentionMaxEntriesPerPlugin=512
 adapterAuditRetentionMaxEntriesPerAdapter=128
 adapterAuditRetentionMaxAgeMillis=300000
+adapterAuditRetentionMaxMemoryBytes=524288
 
-# Adapter payload limits
+# Payload policy profile: strict | balanced | perf
+adapterPayloadPolicyProfile=balanced
+
+# Optional explicit overrides (otherwise profile presets are used)
 adapterMaxPayloadEntries=32
 adapterMaxPayloadTotalChars=4096
 adapterMaxPayloadKeyChars=64
@@ -72,5 +85,6 @@ faultBudgetWindowMillis=60000
 # Event dispatch mode: exact | polymorphic
 # ------------------------------------------------------------------------------
 eventDispatchMode=exact
+
 
 
