--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,12 @@ jobs:
         with:
           distribution: temurin
           java-version: '21'
-      - name: Release Gate (apiCheck + test + performanceBaseline + standaloneReleaseCandidate)
-        run: ./gradlew --no-daemon clean :clockwork-api:apiCheck test performanceBaseline standaloneReleaseCandidate
+      - name: Release Gate (apiCheck + apiCompatibilityReport + test + performanceBaseline + standaloneReleaseCandidate)
+        run: ./gradlew --no-daemon clean :clockwork-api:apiCheck :clockwork-host-api:apiCheck apiCompatibilityReport test performanceBaseline standaloneReleaseCandidate
       - name: Integration Smoke Pipeline
         run: ./gradlew --no-daemon integrationSmoke
+      - name: Upload API Compatibility Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: api-compatibility-report
+          path: build/reports/api-compatibility/report.md
