--- a/clockwork-standalone/standalone.example.properties
+++ b/clockwork-standalone/standalone.example.properties
@@ -18,6 +18,8 @@ autoSaveEveryTicks=200
 chunkViewDistance=4
 maxChunkLoadsPerTick=128
 maxLoadedChunksPerWorld=4096
+# Comma-separated client mods blocked at login (case-insensitive), e.g. gamma,fullbright
+bannedClientMods=
 runtimeSchedulerWorkerThreads=2
 
 # ------------------------------------------------------------------------------
