--- a/showcase-plugins/voiced/clockworkplugin.yml
+++ b/showcase-plugins/voiced/clockworkplugin.yml
@@ -1,8 +1,12 @@
 ﻿id: showcase-voiced
 name: Showcase Voiced
-version: 1.0.0
+version: 1.3.1
 main: com.clockwork.showcase.voiced.VoicedPlugin
 apiVersion: 1
 dependencies: []
+capabilities:
+  - commands
+  - filesystem
+  - network
 permissions:
   - host.player.message
